# daphnemodules

./: CMakeLists.txt
attic/: a.out  configclk.hpp  endpoint_status.cpp  gateware.hpp  select_mode.cpp  test.cpp  testip.cpp
docs/: README.md
plugins/: DaphneController.cpp  DaphneController.hpp
python/daphnemodules/: daphnemodulesapp_gen.py
schema/daphnemodules/: confgen.jsonnet  daphnecontroller.jsonnet  daphnecontrollerinfo.jsonnet
scripts/: daphne_example_config.json  daphne_gen  daphnemodules_example_config.json  daphnemodules_gen
src/: DaphneInterface.cpp  DaphneInterface.hpp  README.txt  clocks.cpp  cmd.hpp  configanalog.hpp  configclk.hpp  data.cpp  endpoint_status.hpp  gateware.cpp  gateware.d  info.hpp  oei.hpp  read20.cpp  testip.hpp  ts.cpp
test/apps/: controller_test.cxx
unittest/: DaphneInterface_test.cxx
